--- a/dtssAnWeihai2/res/layout/zixun_list_item.xml
+++ b/dtssAnWeihai2/res/layout/zixun_list_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
@@ -9,9 +9,10 @@
     <TextView
         android:id="@+id/zixun_title"
         android:layout_width="wrap_content"
-        android:layout_height="34dp"
-        android:text="哈哈"
-        android:textColor="#666666"
-        android:textSize="14dp"/>
+        android:layout_height="40dp"
+        android:layout_centerVertical="true"
+        android:text=""
+        android:textColor="#444"
+        android:textSize="16dp"/>
 
-</LinearLayout>
+</RelativeLayout>
