--- a/dtssAnWeihai2/res/layout/main.xml
+++ b/dtssAnWeihai2/res/layout/main.xml
@@ -22,11 +22,11 @@
         <TextView
             android:id="@+id/main_title"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:textColor="#00479D"
-            android:textSize="24sp"
-            android:textStyle="bold" />
+            android:layout_height="match_parent"
+            android:layout_alignParentLeft="true"
+            android:gravity="center_vertical"
+            android:layout_marginLeft="10dp"
+            android:textColor="#FFF"/>
         
 
         <LinearLayout
